Changes for Perl extension Padre-Plugin-Swarm
0.06 
0.05 - Sun Dec 13 19:51:51 EST 2009
	- add 'Run in other editor' feature 
	- chat text restyled
	- chat accept message type 'promote' 
	- Replaced debug called with new TRACE() call
0.04 - Wed Nov  4 17:36:05 EST 2009
	- test updates
	- version boilerplate (BRAMBLE) 
0.03 *RELEASED POORLY*
	- expunge IRC transport (BRAMBLE)
	- remove list of chat users

0.02 *RELEASED IN ERROR* 
	- add some styling to user chat window , colourize output
	- attempt to add a list of chat users
	- apply diff snippets to current documents silently and with deadly force

0.01 - Sun Nov 1 2009 
	- add chat-join announcements to chat window (BRAMBLE)
	- add support for '/nick' change (BRAMBLE)
	- Moved Padre::Swarm::Transport::XMPP to it's own
	  distribution (ADAMK)
	- Made warnings toggle'able with a single constant (ADAMK)
	- Three available transports - two of which appear to work.
	- Achieve universal application milestone (embed chat client).
	- Factor some rude parts out into Padre::Service
	- Experiments in Multicast and Jabber
	- Creating the initial skeleton